--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <p><a href= ./recipes/lasagna.html>The Best Lasagna</a></p>
 
     </body>
 </html>
