--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,6 +1,7 @@
 <h1>lasagna</h1>
 
 <body>
+    <img src="../images/lasagna.jpeg"/> <!--Added the ../ to move back 1 directory-->
 <ul>
 <li>10 ounces lasagna noodles</li>
 <li>1½ pounds lean ground beef</li>
@@ -14,12 +15,15 @@
 </ul>
 
 <h1>Directions</h2>
-Instructions Checklist
-    Preheat oven to 375 degrees F (190 degrees C).
+    <p>A Quick and easy lasanga thats easy to make!</p>
+<h3>Instructions Checklist</h3>
+<ol>    
+  <p><li> Heat oven to 375 degrees F (190 degrees C).</li></p>
 
-    Bring a large pot of lightly salted water to a boil. Add lasagna noodles and cook for 8 to 10 minutes or until al dente; drain.
+  <p><li> Bring a large pot of lightly salted water to a boil. Add lasagna noodles and cook for 8 to 10 minutes or until al dente; drain.</li></p>
 
-    In a skillet, brown ground beef. Using a fork, mix cottage cheese, eggs, garlic powder, parsley, salt and pepper. In a separate bowl combine tomato paste and tomato sauce.
+  <p><li>In a skillet, brown ground beef. Using a fork, mix cottage cheese, eggs, garlic powder, parsley, salt and pepper. In a separate bowl combine tomato paste and tomato sauce.</li></p>
 
-    In a 9x13 inch baking pan, layer noodles, ground beef, tomato sauce mixture and cottage cheese mixture. Two layers of each will fit. Cover with tin foil and bake for 30 minutes. Remove tin foil the last 8 minutes of baking time.
+  <p><li>In a 9x13 inch baking pan, layer noodles, ground beef, tomato sauce mixture and cottage cheese mixture. Two layers of each will fit. Cover with tin foil and bake for 30 minutes. Remove tin foil the last 8 minutes of baking time.</li></p>
+</ol>
 </body>
