added reciepe to hotdog.html and spagetti.html

--- a/recipes/hotdog.html
+++ b/recipes/hotdog.html
@@ -1,29 +1,31 @@
+<html>
 <h1>lasagna</h1>
 
 <body>
-    <img src="../images/hotdawgs.jpg" alt= "Imamge of hotdog"/> <!--Added the ../ to move back 1 directory-->
+    <img src="../images/spagetti.jpeg" alt= "Imamge of hotdog"/> <!--Added the ../ to move back 1 directory-->
 <ul>
-<li>10 ounces lasagna noodles</li>
-<li>1½ pounds lean ground beef</li>
-<li>3 cups cottage cheese</li>
-<li>2 eggs</li>
-<li>1 teaspoon garlic powder</li>
-<li>2 tablespoons dried parsley</li>
-<li>salt and pepper to taste</li>
-<li>1 (6 ounce) can tomato paste</li>
-<li>2 (6.5 ounce) cans tomato sauce </li>
+
+  <li>8 bacon strips</li>
+  <li>8 hot dogs</li>
+  <li>4 jalapeños, stemmed, halved lengthwise and seeds removed (optional)</li>
+  <li>2 tablespoons vegetable oil, plus more for drizzling (if needed)</li>
+  <li>1 small yellow onion, thinly sliced</li>
+  <li>½ small red bell pepper, thinly sliced</li>
+  <li>½ small green bell pepper, thinly sliced</li>
+  <li>Kosher salt</li>
+  <li>8 hot dog buns</li>
+  <li>Ketchup, yellow mustard and mayonnaise, for serving</li>
+
 </ul>
 
 <h1>Directions</h2>
-    <p>A Quick and easy lasanga thats easy to make!</p>
+  <p>Fun hot dogs to eat while wasted off bourbon!</p>
 <h3>Instructions Checklist</h3>
 <ol>    
-  <p><li> Heat oven to 375 degrees F (190 degrees C).</li></p>
-
-  <p><li> Bring a large pot of lightly salted water to a boil. Add lasagna noodles and cook for 8 to 10 minutes or until al dente; drain.</li></p>
-
-  <p><li>In a skillet, brown ground beef. Using a fork, mix cottage cheese, eggs, garlic powder, parsley, salt and pepper. In a separate bowl combine tomato paste and tomato sauce.</li></p>
-
-  <p><li>In a 9x13 inch baking pan, layer noodles, ground beef, tomato sauce mixture and cottage cheese mixture. Two layers of each will fit. Cover with tin foil and bake for 30 minutes. Remove tin foil the last 8 minutes of baking time.</li></p>
+<p><li> Heat oven to 400 degrees. Tightly wrap each hot dog with a strip of bacon until most of the hot dog is covered. Transfer hot dogs to an aluminum foil-lined baking sheet. If using jalapeños, place them skin-side down on a separate aluminum foil-lined baking sheet and lightly drizzle with oil. Roast jalapeños until skin starts to blister, about 25 minutes. Roast hot dogs until bacon is browned and starts to ripple, about 30 minutes.</li></p>
+  <p><li>Meanwhile, heat 1 tablespoon oil in a large skillet over medium-high. Add the yellow onion and cook, stirring frequently, until it begins to brown and shrinks by half, about 10 minutes. Stir in bell pepper and the remaining 1 tablespoon oil; season to taste with salt. Remove from heat when onions are caramelized and peppers are soft, about 20 minutes.</li></p>
+  <p><li>Make the pico de gallo with avocado: Combine tomatoes, avocado, red onion, cilantro and lime juice in a medium bowl. Season to taste with salt and set aside.</li></p>
+  <p><li>Toast buns, if desired. Blot excess oil from the hot dogs with a paper towel and transfer to buns. Top with onions, peppers and pico de gallo. Drizzle with ketchup, mustard and mayonnaise. Finish with roasted jalapeños, if desired.</li></p>
 </ol>
 </body>
+</html>
