Updated text and links on index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <p><a href= ./recipes/lasagna.html>The Best Lasagna</a></p>
-
+        <p><a href= ./recipes/spagetti.html>Terrible Spagetti Recipes</a></p>
+        <p><a href= ./recipes/hotdog.html>Just a hot dog.</a></p>
     </body>
 </html>
