--- a/recipes/hotdog.html
+++ b/recipes/hotdog.html
@@ -1,21 +1,21 @@
 <html>
-<h1>lasagna</h1>
+<h1>Hot Dogs ala mode</h1>
 
 <body>
-    <img src="../images/spagetti.jpeg" alt= "Imamge of hotdog"/> <!--Added the ../ to move back 1 directory-->
+    <img src="../images/hotdawgs.jpg" alt= "Imamge of hotdog"/> <!--Added the ../ to move back 1 directory-->
 <ul>
 
-  <li>8 bacon strips</li>
-  <li>8 hot dogs</li>
-  <li>4 jalapeños, stemmed, halved lengthwise and seeds removed (optional)</li>
-  <li>2 tablespoons vegetable oil, plus more for drizzling (if needed)</li>
-  <li>1 small yellow onion, thinly sliced</li>
-  <li>½ small red bell pepper, thinly sliced</li>
-  <li>½ small green bell pepper, thinly sliced</li>
-  <li>Kosher salt</li>
-  <li>8 hot dog buns</li>
-  <li>Ketchup, yellow mustard and mayonnaise, for serving</li>
-
+  <p><li>8 bacon strips</li></p>
+  <p><li>8 hot dogs</li></p>
+  <p><li>4 jalapeños, stemmed, halved lengthwise and seeds removed (optional)</li></p>
+  <p><li>2 tablespoons vegetable oil, plus more for drizzling (if needed)</li></p>
+  <p><li>1 small yellow onion, thinly sliced</li></p>
+  <p><li>½ small red bell pepper, thinly sliced</li></p>
+  <p><li>½ small green bell pepper, thinly sliced</li></p>
+  <p><li>Kosher salt</li></p>
+  <p><li>8 hot dog buns</li></p>
+  <p><li>Ketchup, yellow mustard and mayonnaise, for serving</li></p>
+  <p><li>ice cream</li></p>
 </ul>
 
 <h1>Directions</h2>
