--- a/recipes/spagetti.html
+++ b/recipes/spagetti.html
@@ -1,4 +1,4 @@
-<h1>lasagna</h1>
+<h1>Spagetti</h1>
 
 <body>
     <img src="../images/spagetti.jpeg" alt=" image of spagetti"/> <!--Added the ../ to move back 1 directory-->
@@ -15,7 +15,7 @@
 </ul>
 
 <h1>Directions</h2>
-    <p>A Quick and easy lasanga thats easy to make!</p>
+    <p>A not so good spagetti recipe</p>
 <h3>Instructions Checklist</h3>
 <ol>    
   <p><li> Heat oven to 400 degrees. Tightly wrap each hot dog with a strip of bacon until most of the hot dog is covered. Transfer hot dogs to an aluminum foil-lined baking sheet. If using jalapeños, place them skin-side down on a separate aluminum foil-lined baking sheet and lightly drizzle with oil. Roast jalapeños until skin starts to blister, about 25 minutes. Roast hot dogs until bacon is browned and starts to ripple, about 30 minutes.</li></p>
