--- a/recipes/spagetti.html
+++ b/recipes/spagetti.html
@@ -3,15 +3,13 @@
 <body>
     <img src="../images/spagetti.jpeg" alt=" image of spagetti"/> <!--Added the ../ to move back 1 directory-->
 <ul>
-<li>10 ounces lasagna noodles</li>
+<li>20 ounces of spagetti noddles</li>
 <li>1½ pounds lean ground beef</li>
-<li>3 cups cottage cheese</li>
-<li>2 eggs</li>
 <li>1 teaspoon garlic powder</li>
 <li>2 tablespoons dried parsley</li>
 <li>salt and pepper to taste</li>
 <li>1 (6 ounce) can tomato paste</li>
-<li>2 (6.5 ounce) cans tomato sauce </li>
+<li>2 (6.5 ounce) cans tomato sauce</li>
 </ul>
 
 <h1>Directions</h2>
