added text to steps feild

--- a/recipes/spagetti.html
+++ b/recipes/spagetti.html
@@ -16,9 +16,9 @@
     <p>A not so good spagetti recipe</p>
 <h3>Instructions Checklist</h3>
 <ol>    
-  <p><li> Heat oven to 400 degrees. Tightly wrap each hot dog with a strip of bacon until most of the hot dog is covered. Transfer hot dogs to an aluminum foil-lined baking sheet. If using jalapeños, place them skin-side down on a separate aluminum foil-lined baking sheet and lightly drizzle with oil. Roast jalapeños until skin starts to blister, about 25 minutes. Roast hot dogs until bacon is browned and starts to ripple, about 30 minutes.</li></p>
-    <p><li>Meanwhile, heat 1 tablespoon oil in a large skillet over medium-high. Add the yellow onion and cook, stirring frequently, until it begins to brown and shrinks by half, about 10 minutes. Stir in bell pepper and the remaining 1 tablespoon oil; season to taste with salt. Remove from heat when onions are caramelized and peppers are soft, about 20 minutes.</li></p>
-    <p><li>Make the pico de gallo with avocado: Combine tomatoes, avocado, red onion, cilantro and lime juice in a medium bowl. Season to taste with salt and set aside.</li></p>
-    <p><li>Toast buns, if desired. Blot excess oil from the hot dogs with a paper towel and transfer to buns. Top with onions, peppers and pico de gallo. Drizzle with ketchup, mustard and mayonnaise. Finish with roasted jalapeños, if desired.</li></p>
+  <p><li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li> 
+    <p><li>amet est placerat in egestas erat imperdiet sed. Interdum velit euismod in pellentesque. </li></p>
+    <p><li>Sit amet porttitor eget dolor morbi non arcu. </li></p>
+   <p> <li>Pellentesque adipiscing commodo elit at imperdiet dui. Maecenas sed enim ut sem.</li></p>
 </ol>
 </body>
