--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Odin Recipes ala mode (that means with ice cream)</h1>
         <p><a href= ./recipes/lasagna.html>The Best Lasagna</a></p>
         <p><a href= ./recipes/spagetti.html>Terrible Spagetti Recipes</a></p>
         <p><a href= ./recipes/hotdog.html>Just a hot dog.</a></p>
