Added Image to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1>Odin Recipes ala mode (that means with ice cream)</h1>
+        <p><img src="./images/ice-cream-spagetti.jpeg"</p>
         <p><a href= ./recipes/lasagna.html>The Best Lasagna</a></p>
         <p><a href= ./recipes/spagetti.html>Terrible Spagetti Recipes</a></p>
         <p><a href= ./recipes/hotdog.html>Just a hot dog.</a></p>
